--- a/iav.html
+++ b/iav.html
@@ -46,14 +46,12 @@
 <body>
         <div style="background: green; width: 100%; text-align: center; padding: 40px 0;">
             <div style="max-width:1200px; margin:0 auto; position:relative; padding-top:56.25%;">
-                <iframe
-                    src="https://www.youtube.com/embed/f-zqS2CiZqw"
-                    title="Introductory video"
-                    style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                    loading="lazy">
-                </iframe>
+                               <video controls title="Introductory video" style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;">
+                   <source src="fnaf2.mp4" type="video/mp4">
+                   Your browser does not support the video tag.
+                </video>
+            </div>
+
             </div>
             <div style="font-size: 50px; margin-top: 20px;">Place For Introductory Image/Video</div>
         </div>
@@ -68,7 +66,7 @@
 <div class="orange-card" style="background: orange; width:20%; float: left; text-align: center; padding: 400px 0;">
  <div class="iframe-wrapper" style="position:relative; padding-top:56.25%; /* 16:9 ratio */ width:100%; height: 500px;">
        <iframe
-    src="https://www.youtube.com/embed/Z_T0o5uNrlY"
+    src="https://www.youtube.com/embed/f-zqS2CiZqw"
     title="YouTube video player"
     style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
